Fix Explore Pfp Spacing

--- a/src/Pages/Explore.css
+++ b/src/Pages/Explore.css
@@ -7,6 +7,7 @@
 }
 
 .profilePicture {
+	margin-top: 3%;
 	width: 75px;
 	height: 75px;
 	margin-bottom: 3%;
